--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "Nikhil Jain",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.21.2",
-    "mongoose": "^8.9.3"
+    "mongoose": "^8.9.3",
+    "validator": "^13.12.0"
   }
 }
